desktop-pwas: Fix histogram name about time between open app and navigation

We were recording the data under the wrong name. This changes the code
to record the data under the right name.

Bug: 804192
Change-Id: I64023069a6ac5fc6005092f34d82f95c4d7a4399
Reviewed-on: https://chromium-review.googlesource.com/877203
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Reviewed-by: Ben Wells <benwells@chromium.org>
Commit-Queue: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531180}
Former-commit-id: 1e510cfbf503466aa54943d16b97f84aecf3a828