chrome/browser/extensions/bookmark_app_navigation_throttle.cc
@@ -336,7 +336,7 @@ BookmarkAppNavigationThrottle::ProcessNavigation(bool is_redirect) {
     // probably redirected immediately, which is a bad user experience.)
     if (last_entry && !last_entry->GetTimestamp().is_null()) {
       UMA_HISTOGRAM_MEDIUM_TIMES(
-          "Extensions.BookmarkApp.OpenAppDeltaSinceLastNavigation",
+          "Extensions.BookmarkApp.TimeBetweenOpenAppAndLastNavigation",
           base::Time::Now() - last_entry->GetTimestamp());
     }
 
